# pytest-elastic-reporter

./: LICENSE  README.md  pyproject.toml  pytest_elastic_reporter.py
.github/workflows/: delpoy.yml  deploy.yml  test.yml
example/: docker-compose.yml  test_example.py
