[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-elastic-reporter-plugin"
version = "0.1.0"
dependencies = [
    "pytest>=7.0",
    "elasticsearch>=7,<9",
]

[project.entry-points."pytest11"]
es-reporter = "pytest_elastic_reporter"

[tool.setuptools]
py-modules = ["pytest_elastic_reporter"]